some adjustments and refactory in order to set best coding practices I know so far
